# cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_name}}/.binder/: environment.yml
{{cookiecutter.project_name}}/.github/workflows/: check-changelog.yml  publish.yml  test.yml
{{cookiecutter.project_name}}/changes/: README.md
{{cookiecutter.project_name}}/examples/: index.rst  quickstart.ipynb
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_version.py
